--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "formik": "^2.0.8",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-elements": "^1.2.7",
+    "react-native-formik": "^1.7.7",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-image-picker": "^1.1.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "yup": "^0.28.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
