--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-pure-chart": "0.0.24",
     "react-native-reanimated": "^1.4.0",
     "react-native-svg": "^10.0.0",
+    "react-native-timeline-flatlist": "^0.6.5",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
