--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-formik": "^1.7.7",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-image-picker": "^1.1.0",
+    "react-native-progress": "^4.0.3",
     "react-native-pure-chart": "0.0.24",
     "react-native-reanimated": "^1.4.0",
     "react-native-svg": "^10.0.0",
