--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-chart-kit": "^4.3.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.7",
     "react-native-formik": "^1.7.7",
     "react-native-gesture-handler": "^1.5.2",
