--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "yup": "^0.28.0"
   },
   "devDependencies": {
